--- a/src/org/chrisle/netbeans/plugins/nbsymlink/components/CreateSymlinkDialog.form
+++ b/src/org/chrisle/netbeans/plugins/nbsymlink/components/CreateSymlinkDialog.form
@@ -36,7 +36,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace min="0" pref="168" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="278" max="32767" attributes="0"/>
                               <Component id="_createSymlink" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
@@ -47,7 +47,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="_targetFolder" max="32767" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="_targetFolderChooserBtn" min="-2" max="-2" attributes="0"/>
+                              <Component id="_targetFolderChooserBtn" min="-2" pref="73" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
